--- a/.env
+++ b/.env
@@ -3,5 +3,9 @@ user=root
 DBpassword=Yuval106230!
 database=recipes_db
 spooncular_apiKey=425ba405f5eb41e897d9837ac9c250bb
+# spooncular_apiKey=2ffb48b6b00747089c56019baaf8a369
+# spooncular_apiKey=f242072c252847f092301d8d5f4a71e1
+# spooncular_apiKey=f6b81c6eba114a34b5ac3cd107cfbb39
+
 bcrypt_saltRounds=10
 PORT=3000
